--- a/ts3ssv.css
+++ b/ts3ssv.css
@@ -1,4 +1,4 @@
-/* https://github.com/LeoWinterDE/TS3SSV */
+/* https://github.com/LeoWinterDE/TS3ServerStatusViewer */
 
 .ts3ssv, .ts3ssverror{
 	background-color: #ffffff;
